# Sambuca

./: CMakeLists.txt
.github/workflows/: build.yml  debug.yml
Sambuca/: Sambuca.jucer
Sambuca/Builds/VisualStudio2022/: Sambuca.sln  Sambuca_SharedCode.vcxproj  Sambuca_SharedCode.vcxproj.filters  Sambuca_StandalonePlugin.vcxproj  Sambuca_VST3.vcxproj  Sambuca_VST3.vcxproj.filters  Sambuca_VST3ManifestHelper.vcxproj  resources.rc
Sambuca/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Sambuca/Source/: CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.h
